--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Bivishan Dhungana</title>
 </head>
 <body>
-    <h1>Bivishan</h1>
-    <p>hello there is nothing new
+    <h1>css</h1>
+    <p>css is awesome
     </p>
 </body>
 </html>
