--- a/index.html
+++ b/index.html
@@ -1,12 +1,133 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bivishan Dhungana</title>
-</head>
-<body>
-    <h1>Bivishan</h1>
-    <p>hello there is nothing new
-    </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar background">
+        <ul class="nav-list">
+          <div class="logo">
+            <img
+              src="./images/house-isolated-field.jpg"
+              alt="error in logo display"
+            />
+          </div>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Explore</a></li>
+          <li><a href="#">travel info</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">contact us</a></li>
+        </ul>
+        <div class="rightnav">
+          <input type="text" name="search" id="search" />
+          <button class="btn btn-sm">click me</button>
+        </div>
+        <div class="burger">
+          <ion-icon name="menu"></ion-icon>
+          <ion-icon name="close"></ion-icon>
+        </div>
+      </nav>
+    </header>
+
+    <!-- first section start -->
+    <section class="background first-section">
+      <div class="mainbox">
+        <div class="firstHalf">
+          <p class="text-big">The future of education is here</p>
+          <p class="text-small">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+            incidunt velit, accusantium vel eius itaque quibusdam suscipit
+            dolore architecto iure! Est eligendi ipsa, illo dolorem cumque quas
+            perspiciatis ducimus eos?
+          </p>  
+          <div class="buttons">
+            <button class="btn">subscribe</button>
+            <button class="btn">subscribe</button>
+          </div>
+        </div>
+        <div class="secondHalf">
+          <img src="./images/maldives.jpg" alt="" id="maldives" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
+
+<!-- /* ********************** starting new section *******************************************************/ -->
+<section class="section">
+  <div class="paras">
+    <p class="maintag text-big">Rivers in Nepal</p>
+    <p class="subtag text-small" style="padding: 0 10px">
+      Nepal is a land-locked country that is relatively small in size and area,
+      but it is home to several rivers. These rivers of Nepal are undoubtedly
+      beautiful additions to the splendid scenic landscape of the mountain
+      nation. Besides the many advantages of the rivers, including power
+      generation and irrigation, the main tributaries of Nepal are excellent
+      flag bearers of water tourism and adventure.
+    </p>
+  </div>
+  <img src="./images/river.jpg" alt="" />
+</section>
+<!-- the middle section -->
+
+<section class="section left-section">
+  <div class="paras">
+    <p class="maintag text-big">Welcome to himalayas</p>
+    <p class="subtag text-small" style="padding: 0 10px">
+      Founded by a group of experienced mountaineers and entrepreneurs with over
+      twenty years of experience in the adventure travel industry, Glacier
+      Himalaya offers a complete range of exciting outdoor activities and
+      adventures across the Himalayas of Nepal ,Tibet, India and Pakistan. From
+      trekking and mountaineering expeditions to rafting, mountain biking,
+      wildlife safaris and helicopter tours, we pride ourselves with offering
+      the widest possible array of activities that can suit any tastes, and any
+      budget. In addition, we arrange cultural tours, pilgrimages and can
+      tailor-make an itinerary specially to suit your needs, allowing you to
+      discover and enjoy any region of the Himalayas, be it Nepal, Tibet, India
+      or Bhutan.
+    </p>
+  </div>
+  <img src="./images/himal.jpg" alt="" />
+</section>
+
+<!-- the left section -->
+<section class="section">
+  <div class="paras">
+    <p class="maintag text-big">Skyscrapers in Mumbai</p>
+    <p class="subtag text-small" style="padding: 0 10px">
+      The first skyscrapers in Mumbai were constructed during the 1970s, when
+      Usha Kiran and Matru Mandir were developed and stood at about 76 metres
+      (250 feet), or 25 floors, each. After a significant lull, construction
+      projects since the mid-1990s began taking the skyline upwards, with a
+      major acceleration in the pace of development since 2000, when the Lower
+      Parel area began developing. Palais Royale structurally topped out in 2018
+      and is the tallest building in the country with a height of 320 meters,
+      but the building is still under construction. World One stands at 280.2
+      metres (919 feet) and 76 floors is the tallest completed building in
+      Mumbai currently.
+    </p>
+  </div>
+  <img src="./images/mumbai-skyline-skyscrapers-construction.jpg" alt="" />
+</section>
+
+<!-- Contact us section -->
+<section class="contact">
+  <h3>Our location</h3>
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.7149753067933!2d85.33077011490187!3d27.72608528278418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb182eff30984d%3A0xf17e0ccf4cd7c7f!2sEkGhanti%20Headquarters!5e0!3m2!1sen!2snp!4v1666246810152!5m2!1sen!2snp"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+  </div>
+</section>
